glibc (2.31-0experimental1) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * debian/testsuite-xfail-debian.mk: Update hurd-i386 results.

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Add clone3 syscall to arm64 version of arch-syscall.h.

 -- Samuel Thibault <sthibault@debian.org>  Thu, 12 Mar 2020 12:58:29 +0100

glibc (2.31-0experimental0) experimental; urgency=medium

  [ Aurelien Jarno ]
  * New upstream release:
    - Adds GNU hash support on MIPS (closes: #943538).
    - debian/symbols.wildcard: add 2.31.
    - debian/debhelper.in/libc-dev{,-alt}.install: drop libmvec_nonshared.a.
    - debian/patches/localedata/locales/ku_TR: rebased.
    - debian/patches/localedata/fo_FO-date_fmt.diff: rebased.
    - debian/patches/localedata/locales-fr.diff: rebased.
    - debian/patches/localedata/locale-zh_TW.diff: rebased.
    - debian/patches/localedata/submitted-bz9725-locale-sv_SE.diff:
      upstreamed.
    - debian/patches/localedata/submitted-en_AU-date_fmt.diff: upstreamed.
    - debian/patches/alpha/local-string-functions.diff: rebased.
    - debian/patches/hurd-i386/git-ONSTACK.diff: upstreamed.
    - debian/patches/hurd-i386/git-getrandom.diff: upstreamed.
    - debian/patches/hurd-i386/git-altstack-RPC.diff: upstreamed.
    - debian/patches/hurd-i386/local-enable-ldconfig.diff: rebased.
    - debian/patches/hurd-i386/git-context_functions.diff: upstreamed.
    - debian/patches/hurd-i386/tg-thread-cancel.diff: rebased.
    - debian/patches/hurd-i386/git-sendmsg-SCM_RIGHTS.diff: upstreamed.
    - debian/patches/hurd-i386/git-hurdsig-fixes.diff: upstreamed.
    - debian/patches/hurd-i386/git-hurdsig-global-dispositions.diff:
      upstreamed.
    - debian/patches/hurd-i386/git-hurdsig-globaldisp-version.diff: upstreamed.
    - debian/patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: rebased.
    - debian/patches/hurd-i386/git-hurdsig-fixes-2.diff: upstreamed.