@@ -1,16 +1,16 @@
-# FIXME: someday we may need to handle installing into non-lib.
-TMPDIR/SLIBDIR/ld*.so* lib
-TMPDIR/SLIBDIR/libm-*.so* lib
-TMPDIR/SLIBDIR/libm.so* lib
-TMPDIR/SLIBDIR/libmvec-* lib
-TMPDIR/SLIBDIR/libmvec.so* lib
-TMPDIR/SLIBDIR/libdl*.so* lib
-TMPDIR/SLIBDIR/libresolv*.so* lib
-TMPDIR/SLIBDIR/libc-*.so* lib
-TMPDIR/SLIBDIR/libc.so* lib
-TMPDIR/SLIBDIR/libutil* lib
-TMPDIR/SLIBDIR/libcrypt* lib
-TMPDIR/SLIBDIR/librt*.so* lib
-TMPDIR/SLIBDIR/libpthread*.so* lib
-TMPDIR/SLIBDIR/libnss_dns*.so* lib
-TMPDIR/SLIBDIR/libnss_files*.so* lib
+TMPDIR/lib/*.so* RTLDDIR
+TMPDIR/SLIBDIR/ld*.so* SLIBDIR
+TMPDIR/SLIBDIR/libm-*.so* SLIBDIR
+TMPDIR/SLIBDIR/libm.so* SLIBDIR
+TMPDIR/SLIBDIR/libmvec-* SLIBDIR
+TMPDIR/SLIBDIR/libmvec.so* SLIBDIR
+TMPDIR/SLIBDIR/libdl*.so* SLIBDIR
+TMPDIR/SLIBDIR/libresolv*.so* SLIBDIR
+TMPDIR/SLIBDIR/libc-*.so* SLIBDIR
+TMPDIR/SLIBDIR/libc.so* SLIBDIR
+TMPDIR/SLIBDIR/libutil* SLIBDIR
+TMPDIR/SLIBDIR/libcrypt* SLIBDIR
+TMPDIR/SLIBDIR/librt*.so* SLIBDIR
+TMPDIR/SLIBDIR/libpthread*.so* SLIBDIR
+TMPDIR/SLIBDIR/libnss_dns*.so* SLIBDIR
+TMPDIR/SLIBDIR/libnss_files*.so* SLIBDIR
