@@ -6,6 +6,8 @@ glibc (2.31-0experimental1) UNRELEASED; urgency=medium
   [ Aurelien Jarno ]
   * debian/patches/git-updates.diff: update from upstream stable branch:
     - Add clone3 syscall to arm64 version of arch-syscall.h.
+  * debian/debhelper.in/libc-udeb.install, debian/rules.d/debhelper.mk: use
+    the multiarch path in the udeb package.
 
  -- Samuel Thibault <sthibault@debian.org>  Thu, 12 Mar 2020 12:58:29 +0100
 
